* Changes up to September 12, 2003
*******************************************************************************************

(101) Include files:  Underscores added to the defined constants which prevent multiple inclusions

(102) String functions:  Arguments changed from "char *" to "unsigned char *" for compatibility with GLUT

(103) Added several explicit type casts to allow compilation with "Dev C++" compiler

(104) Quite a bit of debugging of the menus in their menu windows

(105) Removed "glib" dependency from joystick code; now it compiles under FreeBSD

(106) Removed the "fgCleanUpGlutsMess" function because it was redundant


*******************************************************************************************
* Changes on September 13, 2003
*******************************************************************************************

(107) Repaired DOS line endings in the MSVC project and workspace files

(108) Fixed some relative paths in the MSVC demo project files

(109) Fixed all the demo makefiles to ensure they compiled properly; included minor changes to some of the sources.

(110) Fixed compiliation of freeglut_joystick.c on FreeBSD

*******************************************************************************************
* Freeglut 2.0.0 Released on  September 29, 2003!
*******************************************************************************************
	
*******************************************************************************************
* Changes on October 3, 2003
*******************************************************************************************

(110) Tweaking for the menu behavior on Linux regarding mice, etc. - John Fay

*******************************************************************************************
* Changes on October 6, 2003
*******************************************************************************************

(111) freeglut_menu.c:328 Fix submenu triangle (John Fay)
