@@ -338,3 +338,9 @@ October 24, 2002:
 
 (111) freeglut_menu.c:328 Fix submenu triangle (John Fay)
 
+*******************************************************************************************
+* Changes on October 8, 2003
+*******************************************************************************************
+
+(112) freeglut_menu.c:217,519,532: Fix menus to stay in the window (John Fay)
+
